@@ -627,14 +627,16 @@ IF(BUILD_STATIC)
   #SET_TARGET_PROPERTIES(openal_static PROPERTIES OUTPUT_NAME openal)
   SET_TARGET_PROPERTIES(openal_static PROPERTIES LINKER_LANGUAGE C)
   TARGET_LINK_LIBRARIES(openal_static ${ADD_LIBS})
-  ADD_CUSTOM_COMMAND(
-    TARGET openal_static
-    POST_BUILD
-    COMMAND ${CMAKE_COMMAND}
-    ARGS -E copy
-      ${CMAKE_BINARY_DIR}/${CMAKE_STATIC_LIBRARY_PREFIX}openal_static${CMAKE_STATIC_LIBRARY_SUFFIX}
-      ${CMAKE_BINARY_DIR}/${CMAKE_STATIC_LIBRARY_PREFIX}openal${CMAKE_STATIC_LIBRARY_SUFFIX})
-  INSTALL_FILES(/lib FILES ${CMAKE_STATIC_LIBRARY_PREFIX}openal${CMAKE_STATIC_LIBRARY_SUFFIX})
+  IF(NOT WIN32)
+    ADD_CUSTOM_COMMAND(
+      TARGET openal_static
+      POST_BUILD
+      COMMAND ${CMAKE_COMMAND}
+      ARGS -E copy
+        ${CMAKE_BINARY_DIR}/${CMAKE_STATIC_LIBRARY_PREFIX}openal_static${CMAKE_STATIC_LIBRARY_SUFFIX}
+        ${CMAKE_BINARY_DIR}/${CMAKE_STATIC_LIBRARY_PREFIX}openal${CMAKE_STATIC_LIBRARY_SUFFIX})
+    INSTALL_FILES(/lib FILES ${CMAKE_STATIC_LIBRARY_PREFIX}openal${CMAKE_STATIC_LIBRARY_SUFFIX})
+  ENDIF(NOT WIN32)
 ENDIF(BUILD_STATIC)
 
 ADD_LIBRARY(openal SHARED ${OPENAL_OBJS})
